put, get, remove methods have gone thread-safe

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,20 @@
             <artifactId>commons-lang</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>signpost-commonshttp4-1.2.1.2</groupId>
+            <artifactId>signpost-commonshttp4-1.2.1.2</artifactId>
+            <scope>system</scope>
+            <version>1.2.1.2</version>
+            <systemPath>${basedir}/src/main/libs/signpost-commonshttp4-1.2.1.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>signpost-core-1.2.1.2</groupId>
+            <artifactId>signpost-core-1.2.1.2</artifactId>
+            <scope>system</scope>
+            <version>1.2.1.2</version>
+            <systemPath>${basedir}/src/main/libs/signpost-core-1.2.1.2.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
@@ -63,6 +77,13 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
